added validation for login and register. and profile and user models.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devconnector",
   "version": "1.0.0",
-  "description": "An app for programmer profiles",
+  "description": "A web app/ potential mobile app for programmer profiles",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.12",
     "passport": "^0.4.0",
